kube/peak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: peak
  name: peak
  namespace: wealthbar
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5001
  selector:
    app: peak
